[gd_scene load_steps=19 format=3 uid="uid://bnh1kovp7p4gs"]

[ext_resource type="Texture2D" uid="uid://dl2yaauqrj7mx" path="res://textures/icon.png" id="1_cueyj"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_dtke5"]

[sub_resource type="Gradient" id="Gradient_a5tn0"]
colors = PackedColorArray(0.54099, 0.54099, 0.54099, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pa4i6"]
gradient = SubResource("Gradient_a5tn0")

[sub_resource type="LabelSettings" id="LabelSettings_h1ko2"]
font_size = 33
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_irhrq"]
bg_color = Color(0.244776, 0.244776, 0.244776, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f3we3"]
bg_color = Color(0.151276, 0.151276, 0.151276, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bank0"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_rw7b8"]
colors = PackedColorArray(0.266575, 0.266575, 0.266575, 1, 0.0846899, 0.0846899, 0.0846899, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_boe4o"]
gradient = SubResource("Gradient_rw7b8")
fill_from = Vector2(1, 1)
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0tv0u"]
bg_color = Color(0.152941, 0.152941, 0.152941, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.447059, 0.447059, 0.447059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vlnhn"]
bg_color = Color(0.151276, 0.151276, 0.151276, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.447059, 0.447059, 0.447059, 1)

[sub_resource type="Gradient" id="Gradient_exmjk"]
colors = PackedColorArray(0.266575, 0.266575, 0.266575, 1, 0.0846899, 0.0846899, 0.0846899, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_u0m2f"]
gradient = SubResource("Gradient_exmjk")
fill_from = Vector2(1, 1)
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qgh3n"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="LabelSettings" id="LabelSettings_v8q0i"]
font_size = 46

[sub_resource type="LabelSettings" id="LabelSettings_aucsq"]
font_size = 21

[sub_resource type="Environment" id="Environment_j0060"]
background_mode = 3
background_canvas_max_layer = 1
glow_enabled = true
glow_intensity = 0.65
glow_bloom = 1.0

[node name="menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_dtke5")

[node name="menu1" type="Control" parent="."]
texture_filter = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bg" type="TextureRect" parent="menu1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_pa4i6")

[node name="icon" type="TextureRect" parent="menu1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.267857
anchor_top = 0.0357143
anchor_right = 0.732143
anchor_bottom = 0.5
grow_horizontal = 2
texture = ExtResource("1_cueyj")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="gamename" type="Label" parent="menu1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.348214
anchor_top = 0.504464
anchor_right = 0.649554
anchor_bottom = 0.607143
grow_horizontal = 2
grow_vertical = 2
text = "SECRETS"
label_settings = SubResource("LabelSettings_h1ko2")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="play" type="Button" parent="menu1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.321429
anchor_top = 0.642857
anchor_right = 0.669643
anchor_bottom = 0.785714
theme_override_font_sizes/font_size = 31
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
text = "PLAY"
metadata/_edit_use_anchors_ = true

[node name="options" type="Button" parent="menu1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.321429
anchor_top = 0.821429
anchor_right = 0.669643
anchor_bottom = 0.964286
theme_override_font_sizes/font_size = 31
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
text = "OPTIONS"
metadata/_edit_use_anchors_ = true

[node name="quit" type="Button" parent="menu1"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -62.0
offset_right = 104.0
offset_bottom = -14.0
grow_vertical = 0
theme_override_font_sizes/font_size = 31
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
text = "QUIT"

[node name="menu2" type="Control" parent="."]
layout_mode = 3
anchor_left = 1.0
anchor_right = 2.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="bg" type="TextureRect" parent="menu2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_boe4o")

[node name="back" type="Button" parent="menu2"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 117.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 31
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
text = "BACK"

[node name="resettimer" type="Button" parent="menu2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -48.0
offset_right = 264.0
offset_bottom = -8.0
grow_vertical = 0
theme_override_font_sizes/font_size = 19
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
text = "reset speedrun timer"

[node name="timer" type="CheckButton" parent="menu2"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -88.0
offset_right = 264.0
offset_bottom = -53.0
grow_vertical = 0
theme_override_font_sizes/font_size = 19
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
text = " enable speedrun timer"

[node name="intro" type="Button" parent="menu2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.214286
anchor_top = 0.285714
anchor_right = 0.214286
anchor_bottom = 0.285714
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/font_disabled_color = Color(0.447059, 0.447059, 0.447059, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/disabled = SubResource("StyleBoxFlat_0tv0u")
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
text = "intro"
metadata/_edit_use_anchors_ = true

[node name="1" type="Button" parent="menu2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.285714
anchor_right = 0.5
anchor_bottom = 0.285714
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/font_disabled_color = Color(0.447059, 0.447059, 0.447059, 1)
theme_override_font_sizes/font_size = 31
theme_override_styles/disabled = SubResource("StyleBoxFlat_0tv0u")
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
disabled = true
text = "1"
metadata/_edit_use_anchors_ = true

[node name="2" type="Button" parent="menu2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.785714
anchor_top = 0.285714
anchor_right = 0.785714
anchor_bottom = 0.285714
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/font_disabled_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_font_sizes/font_size = 31
theme_override_styles/disabled = SubResource("StyleBoxFlat_vlnhn")
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
disabled = true
text = "2"
metadata/_edit_use_anchors_ = true

[node name="3" type="Button" parent="menu2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.214286
anchor_top = 0.464286
anchor_right = 0.214286
anchor_bottom = 0.464286
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/font_disabled_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_font_sizes/font_size = 31
theme_override_styles/disabled = SubResource("StyleBoxFlat_vlnhn")
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
disabled = true
text = "3"
metadata/_edit_use_anchors_ = true

[node name="4" type="Button" parent="menu2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.464286
anchor_right = 0.5
anchor_bottom = 0.464286
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/font_disabled_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_font_sizes/font_size = 31
theme_override_styles/disabled = SubResource("StyleBoxFlat_vlnhn")
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
disabled = true
text = "4
"
metadata/_edit_use_anchors_ = true

[node name="5" type="Button" parent="menu2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.785714
anchor_top = 0.464286
anchor_right = 0.785714
anchor_bottom = 0.464286
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/font_disabled_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_font_sizes/font_size = 31
theme_override_styles/disabled = SubResource("StyleBoxFlat_vlnhn")
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
disabled = true
text = "5"
metadata/_edit_use_anchors_ = true

[node name="6" type="Button" parent="menu2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.214286
anchor_top = 0.642857
anchor_right = 0.214286
anchor_bottom = 0.642857
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/font_disabled_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_font_sizes/font_size = 31
theme_override_styles/disabled = SubResource("StyleBoxFlat_vlnhn")
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
disabled = true
text = "6"
metadata/_edit_use_anchors_ = true

[node name="7" type="Button" parent="menu2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.642857
anchor_right = 0.5
anchor_bottom = 0.642857
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/font_disabled_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_font_sizes/font_size = 31
theme_override_styles/disabled = SubResource("StyleBoxFlat_vlnhn")
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
disabled = true
text = "7"
metadata/_edit_use_anchors_ = true

[node name="credits" type="Button" parent="menu2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.785714
anchor_top = 0.642857
anchor_right = 0.785714
anchor_bottom = 0.642857
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
theme_override_colors/font_disabled_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_font_sizes/font_size = 16
theme_override_styles/disabled = SubResource("StyleBoxFlat_vlnhn")
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
disabled = true
text = "credits"
metadata/_edit_use_anchors_ = true

[node name="menu3" type="Control" parent="."]
layout_mode = 3
anchor_left = -1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="bg" type="TextureRect" parent="menu3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("GradientTexture2D_u0m2f")

[node name="back" type="Button" parent="menu3"]
layout_mode = 1
offset_left = 8.0
offset_top = 8.0
offset_right = 117.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 31
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
text = "BACK"

[node name="volume" type="HSlider" parent="menu3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -8.0
offset_right = 200.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxFlat_qgh3n")
max_value = 5.0
step = 0.5
value = 1.5
ticks_on_borders = true

[node name="volumetext" type="Label" parent="menu3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.285714
anchor_top = 0.321429
anchor_right = 0.714286
anchor_bottom = 0.464286
grow_horizontal = 2
grow_vertical = 2
text = "VOLUME"
label_settings = SubResource("LabelSettings_v8q0i")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="volumeval" type="Label" parent="menu3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.285714
anchor_top = 0.535714
anchor_right = 0.714286
anchor_bottom = 0.602679
grow_horizontal = 2
grow_vertical = 2
text = "#####"
label_settings = SubResource("LabelSettings_aucsq")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="customise" type="Button" parent="menu3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.292411
anchor_top = 0.714286
anchor_right = 0.709821
anchor_bottom = 0.857143
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 31
theme_override_styles/hover = SubResource("StyleBoxFlat_irhrq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f3we3")
theme_override_styles/normal = SubResource("StyleBoxFlat_bank0")
text = "CUSTOMISE"
metadata/_edit_use_anchors_ = true

[node name="env" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_j0060")

[node name="white" type="ColorRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = -1.0
anchor_right = 2.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="menu1/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="menu1/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="menu1/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="menu2/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="menu2/resettimer" to="." method="_on_resettimer_pressed"]
[connection signal="pressed" from="menu2/timer" to="." method="_on_timertoggle_pressed"]
[connection signal="pressed" from="menu2/intro" to="." method="_on_intro_pressed"]
[connection signal="pressed" from="menu2/credits" to="." method="credits"]
[connection signal="pressed" from="menu3/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="menu3/volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="menu3/customise" to="." method="_on_customise_pressed"]
